# MCP_dev_email_server

./: .env  pyproject.toml
docs/: readme.md
src/email_Server/: client.py  server.py
src/email_Server/config/: dbconfig.py
src/email_Server/handles/: CreateEmail_Handles.py  Get_Inbox_Email_detail.py  Get_list_email.py  QQ_query_email_by_subject.py  SendEmailHandler.py  Update_Inbox_email.py  __init__.py  base_Mcp_Handles.py
