[project]
name = "mysql-mcp-server"  # 避免与 mcp 冲突
version = "1.0.0"
description = "MCP标准项目"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.8.0",
    "mysql-connector-python>=9.2.0",
    "pypinyin>=0.54.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_mcp_dev_Test01"]

[project.scripts]
sse_run = "mysql_mcp_dev_Test01.client:sse_run"
stdio_run = "mysql_mcp_dev_Test01.client:stdio_run"

[[project.authors]]
name = "timelocked"